--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
+    "newsfeed": "file:",
     "next": "15.0.4",
     "pg": "^8.13.1",
     "react": "^19.0.0",
